@@ -4,7 +4,7 @@
     <parent>
         <groupId>de.cismet.cids.custom.wuppertal.distribution</groupId>
         <artifactId>wuppertal-distribution</artifactId>
-        <version>24.03.5</version>
+        <version>24.04.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     
@@ -92,8 +92,6 @@
                                 <jvmarg>-Duser.language=de</jvmarg>
                                 <jvmarg>-Xms1024M</jvmarg>
                                 <jvmarg>-Xmx3024M</jvmarg>
-                                <jvmarg>-XX:+CMSParallelRemarkEnabled</jvmarg>
-                                <jvmarg>-XX:+UseConcMarkSweepGC</jvmarg>
                             </jvmargs>
                             <ui>
                                 <name>${launcher.name} v${project.version}</name>
